[gd_scene load_steps=2 format=3 uid="uid://bf4me62jrx8yn"]

[ext_resource type="Script" uid="uid://b154oulu3wqo5" path="res://scripts/settings.gd" id="1"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="MonitorLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Select Monitor:"

[node name="MonitorSelector" type="OptionButton" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpeedLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Cursor Speed:"

[node name="SpeedSlider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 5.0
tick_count = 10
ticks_on_borders = true

[node name="ToggleKeyLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Toggle Key:"

[node name="ToggleKey" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "U"

[node name="ButtonsContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
alignment = 1

[node name="SaveButton" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="CancelButton" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"
